# glider-pro-windows

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  preparing_house_files.md
Headers/: About.h  AnimCursor.h  AppleEvents.h  Audio.h  Banner.h  ByteIO.h  ColorUtils.h  Coordinates.h  DebugUtilities.h  DialogUtils.h  DrawUtils.h  DynamicMaps.h  Dynamics.h  Environ.h  Events.h  Externs.h  FileError.h  FrameTimer.h  GameOver.h  GliderDefines.h  GliderProtos.h  GliderStructs.h  GliderVars.h  Grease.h  HighScores.h  House.h  HouseIO.h  HouseInfo.h  HouseLegal.h  ImageIO.h  Input.h  Interactions.h  InterfaceInit.h  Link.h  MacTypes.h  Macintosh.h  Main.h  MainWindow.h  Map.h  Marquee.h  (+39 more)
Houses/: CD Demo House.rsrc  California or Bust!.rsrc  Castle o' the Air.rsrc  Davis Station.rsrc  Demo House.rsrc  Empty House.rsrc  Fun House.rsrc  Grand Prix.rsrc  ImagineHouse PRO II.rsrc  In The Mirror.rsrc  Land of Illusion.rsrc  Leviathan.rsrc  Metropolis.rsrc  Nemo's Market.rsrc  Rainbow's End.rsrc  Sampler.rsrc  Slumberland.rsrc  SpacePods.rsrc  Teddy World.rsrc  The Asylum Pro.rsrc  Titanic.rsrc
Resources/: Mermaid.cmake  gliderpro.manifest  gliderpro.rc
Resources/Alerts/: 1002.dlg  1004.dlg  1005.dlg  1006.dlg  1008.dlg  1009.dlg  1028.dlg  1029.dlg  1030.dlg  1031.dlg  1032.dlg  1036.dlg  1037.dlg  1038.dlg  1039.dlg  1040.dlg  1041.dlg  1042.dlg  1044.dlg  1046.dlg  130.dlg  140.dlg  160.dlg  170.dlg  180.dlg  181.dlg  ChangesEffectAlert.dlg  ColorSwitchedAlert.dlg  DeathAlert.dlg  DeleteRoomAlert.dlg  FileErrorAlert.dlg  HouseBannerAlert.dlg  LockHouseAlert.dlg  LowMemoryAlert.dlg  NewPrefsAlert.dlg  NewRoomAlert.dlg  NoHighScoreAlert.dlg  NoMemForMusicAlert.dlg  NoMemForSoundsAlert.dlg  NoMoreObjectsAlert.dlg  (+12 more)
Resources/Cursors/: 130.cur  131.cur  149.cur  150.cur  152.cur  153.cur  154.cur  155.cur  158.cur  160.cur  BeachBall02.cur  BeachBall04.cur  BeachBall05.cur  BeachBall10.cur  Hand.cur  Vert.cur
Resources/Dialogs/: 1000.dlg  1001.dlg  1003.dlg  1007.dlg  1010.dlg  1011.dlg  1012.dlg  1013.dlg  1014.dlg  1015.dlg  1016.dlg  1017.dlg  1018.dlg  1019.dlg  1020.dlg  1021.dlg  1022.dlg  1023.dlg  1024.dlg  1025.dlg  1026.dlg  1027.dlg  1033.dlg  1034.dlg  1035.dlg  1043.dlg  1045.dlg  150.dlg  About.dlg  ApplianceInfo.dlg  BlowerInfo.dlg  BrainsPrefs.dlg  ControlPrefs.dlg  CustPictInfo.dlg  DisplayPrefs.dlg  EnemyInfo.dlg  FlowerInfo.dlg  FurnitureInfo.dlg  GoTo.dlg  GreaseInfo.dlg  (+16 more)
Resources/Windows/: Coordinate.dlg  Link.dlg  Message.dlg  Tools.dlg
Sources/: About.c  AnimCursor.c  AppleEvents.c  Audio.c  Banner.c  ByteIO.c  ColorUtils.c  Coordinates.c  DebugUtilities.c  DialogUtils.c  DrawUtils.c  DynamicMaps.c  Dynamics.c  Dynamics2.c  Dynamics3.c  Environ.c  Events.c  FileError.c  FrameTimer.c  GameOver.c  GliderStructs.c  Grease.c  HighScores.c  House.c  HouseIO.c  HouseInfo.c  HouseLegal.c  ImageIO.c  Input.c  Interactions.c  InterfaceInit.c  Link.c  Macintosh.c  Main.c  MainWindow.c  Map.c  Marquee.c  Menu.c  Modes.c  Music.c  (+36 more)
Tools/house-dumper/: Cargo.toml
Tools/house-dumper/src/: main.rs
Tools/resfork-extract/: Cargo.toml  LICENSE-MIT.txt
Tools/resfork-extract/src/: apple_double.rs  bitmap.rs  icocur.rs  mac_clut.rs  mac_roman.rs  macbinary.rs  mace.rs  main.rs  res.rs  rsrcfork.rs  utils.rs
Tools/resfork-extract/src/res/: alert.rs  animated_cursor.rs  bundle.rs  color_cursor.rs  color_icon.rs  color_table.rs  control.rs  control_color_table.rs  cursor.rs  dialog.rs  dialog_color_table.rs  file_reference.rs  icon.rs  icon_list.rs  item_list.rs  large_4bit_icon.rs  large_8bit_icon.rs  menu.rs  menu_color_table.rs  mod.rs  pattern_list.rs  picture.rs  small_4bit_icon.rs  small_8bit_icon.rs  small_icon_list.rs  sound.rs  string_list.rs  text.rs  version.rs  window.rs  window_color_table.rs
miniz/: miniz.h
